6 June 2011: Wouter
	- fix unit tests for mmap with TODO and removal of -f in nsd-patch.
	- zone expiry is communicated via the mmap, and not via the pipes,
	  simplifying the code significantly as well as making a large number
	  of zones more feasible.

1 June 2011: Wouter
	- mmap used for parent-xfrd communication of tasks and task results.
	  SIGHUP is sent to xfrd so it can become a task in the normal
	  workflow. This can process about 4500 zones per second (this was
	  with lots of debug prints per zone, in debug compile). The mmaps
	  are file-backed with /tmp/ files.  They are removed on a clean exit.
	- nsd.db and tmp mmaps are created with mode 0600 for safety.
	- updated flag removed, nsd-patch always in -f force mode (-f removed)
	  and writes all zones always. Its role is taken over by task results.

30 May 2011: Wouter
	- Fix Makefile for U in environment, since wrong U is more common than
	  deansification necessity.

27 May 2011: Wouter
	- xfrd is forked before the database is read in, thus it does not
	  consume the memory of the database.  It can be reforked on a crash,
	  which is like the current case.  Difffile is cleaned by main process
	  and the soa serials are all sent via pipe instead of via forkmem.

24 May 2011: Wouter
	- implemented patterns in the nsd.conf file.
	  they can be instantiated with include-pattern: x.
	  existing zone definitions keep working (backwards compatible), such
	  zones really have an implicit pattern and cannot_delete flag set.
	- work on zonelist read and storage.

20 May 2011: Wouter
	- from NSD_3_2 branch the fix: bug if the zonefile is changed for a
	secondary but stored transfers are applied, and stop ixfr to empty.
	The zone is flagged with error, and the good zone is still in nsd.db
	for NSD4.

17 May 2011: Wouter
	- unit test for code coverage on nsec3 ixfr.
	- tag 4.0.0-imp3 created
	- trunk is 4.0.0-imp4 under development.

13 May 2011: Matthijs
	- Fix bug #381 - Binary escaped and transfers.
